--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
+browser.id=SL[/Browsers/FirefoxBrowser
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=D:\\xampp\\htdocs\\thinkphp-guide
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/thinkphp-guide/
+url=http://localhost/thinkphp-guide/thinkphp-guide
